k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compare-service
  namespace: compare
spec:
  selector:
    app: compare
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
